--- a/index.html
+++ b/index.html
@@ -1,90 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Kaleem & Fiza | Engagement</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Kaleem & Fiza | Engagement</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
 
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: #fffaf3;
-      color: #3b2f2f;
-      text-align: center;
-    }
-    .hero {
-      padding: 70px 20px;
-      background: radial-gradient(circle at top, #fff3dc, #fffaf3);
-    }
-    .hero h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 46px;
-      color: #b08d57;
-      margin-bottom: 10px;
-    }
-    .hero h2 {
-      font-weight: 300;
-      font-size: 20px;
-      margin-bottom: 20px;
-    }
-    .date {
-      font-size: 18px;
-      letter-spacing: 1px;
-    }
-    .section {
-      padding: 50px 20px;
-    }
-    .card {
-      background: #ffffff;
-      max-width: 420px;
-      margin: auto;
-      padding: 25px;
-      border-radius: 14px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
-    }
-    .card h3 {
-      font-family: 'Playfair Display', serif;
-      color: #b08d57;
-      margin-bottom: 15px;
-    }
-    footer {
-      padding: 25px;
-      font-size: 14px;
-      color: #777;
-    }
-  </style>
+<style>
+body{
+  margin:0;
+  font-family:'Poppins',sans-serif;
+  background:radial-gradient(circle at top,#fff3dc,#fffaf3);
+  color:#3b2f2f;
+}
+
+/* Opening Card */
+#cover{
+  position:fixed;
+  inset:0;
+  background:linear-gradient(135deg,#b08d57,#fff1dc);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  z-index:10;
+  animation:openCard 2.8s forwards;
+}
+
+@keyframes openCard{
+  0%{opacity:1;transform:scale(1)}
+  100%{opacity:0;transform:scale(1.25);visibility:hidden}
+}
+
+.cover-box{
+  background:#fff;
+  padding:45px;
+  border-radius:20px;
+  text-align:center;
+  box-shadow:0 25px 50px rgba(0,0,0,.25);
+}
+
+.cover-box h1{
+  font-family:'Playfair Display',serif;
+  color:#b08d57;
+}
+
+.cover-box p{
+  letter-spacing:2px;
+}
+
+/* Logo */
+.logo{
+  width:90px;
+  height:90px;
+  border-radius:50%;
+  border:2px solid #b08d57;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  margin:0 auto 20px;
+  font-family:'Playfair Display',serif;
+  font-size:28px;
+  color:#b08d57;
+}
+
+/* Hero */
+.hero{
+  text-align:center;
+  padding:90px 20px 60px;
+  animation:fadeIn 2s ease;
+}
+
+@keyframes fadeIn{
+  from{opacity:0;transform:translateY(30px)}
+  to{opacity:1;transform:translateY(0)}
+}
+
+.hero h1{
+  font-family:'Playfair Display',serif;
+  font-size:46px;
+  color:#b08d57;
+}
+
+.hero h2{
+  font-weight:300;
+}
+
+/* Sections */
+.section{
+  padding:50px 20px;
+}
+
+.card{
+  max-width:440px;
+  margin:0 auto 30px;
+  background:#fff;
+  padding:30px;
+  border-radius:18px;
+  box-shadow:0 10px 25px rgba(0,0,0,.08);
+}
+
+.card h3{
+  font-family:'Playfair Display',serif;
+  color:#b08d57;
+}
+
+/* Ayah */
+.ayah-ar{
+  font-size:26px;
+  font-family:'Amiri',serif;
+  margin-bottom:15px;
+}
+
+.ayah-en{
+  font-size:14px;
+  color:#555;
+}
+
+/* Music */
+.music{
+  position:fixed;
+  bottom:15px;
+  right:15px;
+  background:#fff;
+  padding:8px;
+  border-radius:50%;
+  box-shadow:0 5px 15px rgba(0,0,0,.2);
+}
+
+/* Footer */
+footer{
+  text-align:center;
+  padding:25px;
+  font-size:14px;
+  color:#777;
+}
+</style>
 </head>
 
 <body>
 
-  <div class="hero">
+<!-- Opening Cover -->
+<div id="cover">
+  <div class="cover-box">
+    <div class="logo">K & F</div>
     <h1>Kaleem & Fiza</h1>
-    <h2>We’re Getting Engaged 💍</h2>
-    <div class="date">11 January 2026</div>
+    <p>ENGAGEMENT INVITATION</p>
   </div>
+</div>
 
-  <div class="section">
-    <div class="card">
-      <h3>Engagement Details</h3>
-      <p><strong>Date:</strong> 11 January 2026</p>
-      <p><strong>Time:</strong> 11:00 AM</p>
-      <p><strong>Venue:</strong> Nellore, Andhra Pradesh</p>
+<!-- Music -->
+<div class="music">
+  <audio controls autoplay loop>
+    <source src="music.mp3" type="audio/mpeg">
+  </audio>
+</div>
+
+<!-- Hero -->
+<div class="hero">
+  <div class="logo">K & F</div>
+  <h1>Kaleem & Fiza</h1>
+  <h2>With the blessings of Allah ﷻ</h2>
+  <p><strong>11 January 2026</strong></p>
+</div>
+
+<!-- Ayah Section -->
+<div class="section">
+  <div class="card">
+    <div class="ayah-ar">
+      وَمِنْ آيَاتِهِ أَنْ خَلَقَ لَكُمْ مِنْ أَنْفُسِكُمْ أَزْوَاجًا
+    </div>
+    <div class="ayah-en">
+      “And among His signs is that He created for you spouses from among yourselves…”
+      <br><em>(Qur’an 30:21)</em>
     </div>
   </div>
 
-  <div class="section">
-    <div class="card">
-      <h3>Dua</h3>
-      <p>“And among His signs is that He created for you spouses from among yourselves…”</p>
-      <p><em>Qur’an 30:21</em></p>
-    </div>
+  <div class="card">
+    <h3>Engagement Details</h3>
+    <p><strong>Date:</strong> 11 January 2026</p>
+    <p><strong>Time:</strong> 11:00 AM</p>
+    <p><strong>Venue:</strong> Nellore, Andhra Pradesh</p>
   </div>
 
-  <footer>
-    With love, prayers & blessings 🤍
-  </footer>
+  <div class="card">
+    <h3>Location</h3>
+    <iframe
+      src="https://www.google.com/maps?q=Nellore%20Andhra%20Pradesh&output=embed"
+      width="100%" height="250" allowfullscreen>
+    </iframe>
+  </div>
+</div>
+
+<footer>
+  May Allah bless our union with love & barakah 🤍
+</footer>
 
 </body>
 </html>
