--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Kaleem & Fiza | Engagement</title>
+<title>Kaleem & Fiza | Nikah Book</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
@@ -11,161 +11,162 @@
 body{
   margin:0;
   font-family:'Poppins',sans-serif;
-  background:radial-gradient(circle at top,#fff3dc,#fffaf3);
-  color:#3b2f2f;
+  background:#fdf8ef;
 }
 
-/* Opening Card */
-#cover{
-  position:fixed;
-  inset:0;
-  background:linear-gradient(135deg,#b08d57,#fff1dc);
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  z-index:10;
-  animation:openCard 2.8s forwards;
-}
-@keyframes openCard{
-  to{opacity:0;transform:scale(1.25);visibility:hidden}
-}
-
-.cover-box{
+.book{
+  max-width:700px;
+  margin:40px auto;
   background:#fff;
-  padding:45px;
   border-radius:20px;
-  text-align:center;
-  box-shadow:0 25px 50px rgba(0,0,0,.25);
+  box-shadow:0 25px 60px rgba(0,0,0,.15);
+  overflow:hidden;
+  perspective:1500px;
 }
 
-.logo{
-  width:90px;
-  height:90px;
-  border-radius:50%;
-  border:2px solid #b08d57;
+.page{
+  display:none;
+  padding:50px 40px;
+  animation:flip 0.8s ease;
+}
+
+.page.active{
+  display:block;
+}
+
+@keyframes flip{
+  from{transform:rotateY(-90deg);opacity:0}
+  to{transform:rotateY(0);opacity:1}
+}
+
+h1,h2,h3{
+  font-family:'Playfair Display',serif;
+  color:#b08d57;
+  text-align:center;
+}
+
+.center{text-align:center}
+
+.nav{
   display:flex;
-  align-items:center;
-  justify-content:center;
-  margin:0 auto 20px;
-  font-family:'Playfair Display',serif;
-  font-size:28px;
-  color:#b08d57;
+  justify-content:space-between;
+  padding:20px 30px;
+  background:#fffaf3;
 }
 
-.hero{
-  text-align:center;
-  padding:90px 20px 50px;
+button{
+  background:#b08d57;
+  color:#fff;
+  border:none;
+  padding:10px 18px;
+  border-radius:20px;
+  cursor:pointer;
 }
 
-.hero h1{
-  font-family:'Playfair Display',serif;
-  font-size:46px;
-  color:#b08d57;
+button:disabled{
+  opacity:0.4;
 }
 
-.section{
-  padding:50px 20px;
-}
-
-.card{
-  max-width:460px;
-  margin:0 auto 30px;
-  background:#fff;
-  padding:30px;
-  border-radius:18px;
-  box-shadow:0 10px 25px rgba(0,0,0,.08);
-}
-
-.card h3{
-  font-family:'Playfair Display',serif;
-  color:#b08d57;
-}
-
-.countdown{
-  display:flex;
-  justify-content:space-around;
-  font-size:18px;
-}
-
-.countdown div{
+.ayah-ar{
+  font-size:26px;
   text-align:center;
 }
 
-iframe{
-  border-radius:14px;
-}
-
-footer{
-  text-align:center;
+.profile{
+  background:#fffaf3;
+  border:1px solid #f1e4c8;
+  border-radius:16px;
   padding:25px;
-  font-size:14px;
-  color:#777;
 }
 </style>
 </head>
 
 <body>
 
-<!-- Opening -->
-<div id="cover">
-  <div class="cover-box">
-    <div class="logo">K & F</div>
-    <h2>Engagement Invitation</h2>
-  </div>
-</div>
+<div class="book" id="book">
 
-<!-- Hero -->
-<div class="hero">
-  <div class="logo">K & F</div>
-  <h1>Kaleem & Fiza</h1>
-  <p>With the blessings of Allah ﷻ</p>
-  <p><strong>11 January 2026</strong></p>
-</div>
-
-<!-- Calligraphy -->
-<div class="section">
-  <div class="card" style="text-align:center">
-    <img src="calligraphy.png" width="180">
-    <p style="margin-top:15px">
-      “And among His signs is that He created for you spouses…”
-      <br><em>(Qur’an 30:21)</em>
-    </p>
+  <div class="page active">
+    <h1>Kaleem & Fiza</h1>
+    <p class="center">In the name of Allah, the Most Merciful</p>
+    <p class="center"><strong>Nikah & Engagement Book</strong></p>
+    <p class="center">11 January 2026</p>
   </div>
 
-  <!-- Countdown -->
-  <div class="card">
-    <h3>Countdown to Our Engagement</h3>
-    <div class="countdown">
-      <div><span id="days"></span><br>Days</div>
-      <div><span id="hours"></span><br>Hours</div>
-      <div><span id="minutes"></span><br>Minutes</div>
-      <div><span id="seconds"></span><br>Seconds</div>
+  <div class="page">
+    <h2>Index</h2>
+    <p>Chapter 1 – The Blessed Union</p>
+    <p>Chapter 2 – The Groom</p>
+    <p>Chapter 3 – The Bride</p>
+    <p>Chapter 4 – Event Details</p>
+    <p>Chapter 5 – Venue</p>
+    <p>Final Page – Duas</p>
+  </div>
+
+  <div class="page">
+    <h2>The Blessed Union</h2>
+    <div class="ayah-ar">
+      وَمِنْ آيَاتِهِ أَنْ خَلَقَ لَكُمْ مِنْ أَنْفُسِكُمْ أَزْوَاجًا
+    </div>
+    <p class="center"><em>Qur’an 30:21</em></p>
+  </div>
+
+  <div class="page">
+    <h2>The Groom</h2>
+    <div class="profile">
+      <h3>Kaleem Shaik</h3>
+      <p>Son of Shaik Jeelani</p>
+      <p>A believer striving for faith, responsibility, and kindness.</p>
     </div>
   </div>
 
-  <!-- RSVP -->
-  <div class="card">
-    <h3>RSVP</h3>
-    <iframe src="FORM_LINK_HERE"
-      width="100%" height="420" frameborder="0">
-    </iframe>
+  <div class="page">
+    <h2>The Bride</h2>
+    <div class="profile">
+      <h3>Fiza</h3>
+      <p>A woman of grace, patience, and strong Islamic values.</p>
+    </div>
   </div>
+
+  <div class="page">
+    <h2>Event Details</h2>
+    <p class="center">11 January 2026 – 11:00 AM</p>
+    <p class="center">Engagement & Nikah Blessings</p>
+  </div>
+
+  <div class="page">
+    <h2>Venue</h2>
+    <iframe src="https://www.google.com/maps?q=Nellore%20Andhra%20Pradesh&output=embed"
+      width="100%" height="250" style="border:0;border-radius:16px"></iframe>
+  </div>
+
+  <div class="page">
+    <h2>Duas & Gratitude</h2>
+    <p class="center">May Allah grant us sakinah, mawaddah, and rahmah.</p>
+  </div>
+
+  <div class="nav">
+    <button onclick="prevPage()">Previous</button>
+    <button onclick="nextPage()">Next</button>
+  </div>
+
 </div>
 
-<footer>
-  May Allah bless this union with love & barakah 🤍
-</footer>
-
 <script>
-const eventDate = new Date("January 11, 2026 11:00:00").getTime();
-setInterval(() => {
-  const now = new Date().getTime();
-  const diff = eventDate - now;
-  document.getElementById("days").innerText = Math.floor(diff/(1000*60*60*24));
-  document.getElementById("hours").innerText = Math.floor((diff%(1000*60*60*24))/(1000*60*60));
-  document.getElementById("minutes").innerText = Math.floor((diff%(1000*60*60))/(1000*60));
-  document.getElementById("seconds").innerText = Math.floor((diff%(1000*60))/1000);
-},1000);
+let pages=document.querySelectorAll('.page');
+let current=0;
+
+function showPage(i){
+  pages.forEach(p=>p.classList.remove('active'));
+  pages[i].classList.add('active');
+}
+
+function nextPage(){
+  if(current<pages.length-1){current++;showPage(current);}
+}
+
+function prevPage(){
+  if(current>0){current--;showPage(current);}
+}
 </script>
 
 </body>
