--- a/index.html
+++ b/index.html
@@ -15,24 +15,22 @@ body{
 }
 
 .book{
-  max-width:700px;
+  max-width:720px;
   margin:40px auto;
   background:#fff;
   border-radius:20px;
   box-shadow:0 25px 60px rgba(0,0,0,.15);
   overflow:hidden;
-  perspective:1500px;
+  perspective:1600px;
 }
 
 .page{
   display:none;
-  padding:60px 40px;
-  animation:flip 0.8s ease;
+  padding:60px 45px;
+  animation:flip .8s ease;
 }
 
-.page.active{
-  display:block;
-}
+.page.active{display:block}
 
 @keyframes flip{
   from{transform:rotateY(-90deg);opacity:0}
@@ -47,7 +45,6 @@ h1,h2,h3{
 
 .center{text-align:center}
 
-/* Logo */
 .logo{
   width:100px;
   height:100px;
@@ -62,20 +59,6 @@ h1,h2,h3{
   color:#b08d57;
 }
 
-/* Bismillah */
-.bismillah-ar{
-  font-size:36px;
-  text-align:center;
-  margin-bottom:20px;
-}
-
-.bismillah-en{
-  text-align:center;
-  font-size:14px;
-  color:#555;
-}
-
-/* Profile */
 .profile{
   background:#fffaf3;
   border:1px solid #f1e4c8;
@@ -83,7 +66,6 @@ h1,h2,h3{
   padding:25px;
 }
 
-/* Navigation */
 .nav{
   display:flex;
   justify-content:space-between;
@@ -95,6 +77,143 @@ button{
   background:#b08d57;
   color:#fff;
   border:none;
-  padding:10px 18px;
+  padding:10px 20px;
   border-radius:20px;
-  cursor:poi
+  cursor:pointer;
+}
+
+button:disabled{opacity:.4}
+
+.urdu{
+  direction:rtl;
+  font-size:18px;
+  line-height:1.8;
+  text-align:center;
+}
+</style>
+</head>
+
+<body>
+
+<audio id="flipSound" src="page.mp3"></audio>
+
+<div class="book">
+
+<!-- PAGE 1 : INVITATION -->
+<div class="page active">
+  <div class="logo">K & F</div>
+  <h1>You Are Invited</h1>
+  <p class="center">to the engagement of</p>
+  <h2>Kaleem & Fiza</h2>
+  <p class="center"><strong>11 January 2026</strong></p>
+</div>
+
+<!-- PAGE 2 : BISMILLAH (CALLIGRAPHY) -->
+<div class="page center">
+  <img src="bismillah.png" width="320" alt="Bismillah Calligraphy">
+  <p style="margin-top:20px">
+    In the name of Allah, the Most Merciful, the Most Compassionate
+  </p>
+</div>
+
+<!-- PAGE 3 : BISMILLAH (URDU) -->
+<div class="page">
+  <h2>بسم اللہ</h2>
+  <p class="urdu">
+    اللہ کے نام سے شروع جو نہایت مہربان، رحم کرنے والا ہے۔
+  </p>
+</div>
+
+<!-- PAGE 4 : BLESSED UNION -->
+<div class="page">
+  <h2>The Blessed Union</h2>
+  <p class="center" style="font-size:22px">
+    وَمِنْ آيَاتِهِ أَنْ خَلَقَ لَكُمْ مِنْ أَنْفُسِكُمْ أَزْوَاجًا
+  </p>
+  <p class="center"><em>(Qur’an 30:21)</em></p>
+</div>
+
+<!-- PAGE 5 : AYAH URDU -->
+<div class="page">
+  <h2>قرآنی پیغام</h2>
+  <p class="urdu">
+    اور اس کی نشانیوں میں سے یہ ہے کہ اس نے تمہارے لیے تم ہی میں سے جوڑے پیدا کیے،
+    تاکہ تم ان سے سکون حاصل کرو۔
+  </p>
+</div>
+
+<!-- PAGE 6 : GROOM -->
+<div class="page">
+  <h2>The Groom</h2>
+  <div class="profile">
+    <h3>Kaleem Shaik</h3>
+    <p>Son of Shaik Jeelani</p>
+    <p>A believer striving to live with faith, humility, and responsibility.</p>
+  </div>
+</div>
+
+<!-- PAGE 7 : BRIDE -->
+<div class="page">
+  <h2>The Bride</h2>
+  <div class="profile">
+    <h3>Fiza</h3>
+    <p>A woman of grace, patience, and strong Islamic values.</p>
+  </div>
+</div>
+
+<!-- PAGE 8 : EVENT -->
+<div class="page center">
+  <h2>Engagement Details</h2>
+  <p><strong>Date:</strong> 11 January 2026</p>
+  <p><strong>Time:</strong> 11:00 AM</p>
+  <p>With the blessings of Allah ﷻ</p>
+</div>
+
+<!-- PAGE 9 : VENUE -->
+<div class="page">
+  <h2>Venue</h2>
+  <iframe
+    src="https://www.google.com/maps?q=Nellore%20Andhra%20Pradesh&output=embed"
+    width="100%" height="260"
+    style="border:0;border-radius:16px">
+  </iframe>
+</div>
+
+<!-- PAGE 10 : DUAS -->
+<div class="page center">
+  <h2>Duas & Gratitude</h2>
+  <p>
+    We humbly request your duas as we begin our journey together for the sake of Allah.
+  </p>
+  <p><em>May Allah grant us sakinah, mawaddah & rahmah.</em></p>
+</div>
+
+<div class="nav">
+  <button onclick="prevPage()">Previous</button>
+  <button onclick="nextPage()">Next</button>
+</div>
+
+</div>
+
+<script>
+let pages=document.querySelectorAll('.page');
+let current=0;
+let sound=document.getElementById("flipSound");
+
+function showPage(i){
+  pages.forEach(p=>p.classList.remove('active'));
+  pages[i].classList.add('active');
+  sound.play();
+}
+
+function nextPage(){
+  if(current<pages.length-1){current++;showPage(current);}
+}
+
+function prevPage(){
+  if(current>0){current--;showPage(current);}
+}
+</script>
+
+</body>
+</html>
